# lite_star_test

./: Dockerfile  README.md  compose.yml  pyproject.toml
app/: config.py  main.py
app/dto/: user_dto.py
app/models/: user.py
app/pydantic/: user_pd.py
app/repositories/: user_repo.py
app/routes/: user.py
