[project]
name = "lite-star-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Aleksandr Sidorov",email = "a.sidorov@teleguard.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litestar (>=2.15.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lite_star_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
#python = ">=3.10,<4.0"
python = "^3.12"
litestar = {extras = ["standard"], version = "^2"}
litestar-granian = "^0"
litestar-asyncpg = "^0"
advanced-alchemy = "^0.20"
msgspec = "^0.18.6"
python-dotenv = "^1"
